diff for changes only directly related to PETSc 3.8

--- a/installation/patch/PETSc3.8
+++ b/installation/patch/PETSc3.8
@@ -1,33 +1,20 @@
-From 1cc8e60d02323c3c9448df73bfc8f36f697e939a Mon Sep 17 00:00:00 2001
+From 87e307a9c511f3f40598edbd5996297d7804ce62 Mon Sep 17 00:00:00 2001
 From: Martin Diehl <m.diehl@mpie.de>
-Date: Mon, 20 Nov 2017 12:53:47 +0100
-Subject: [PATCH] existing patch + further fixes
+Date: Tue, 21 Nov 2017 15:12:04 +0100
+Subject: [PATCH] due to changes in interface of PETSc
 
 ---
- src/DAMASK_spectral.f90              | 27 +++++--------
- src/constitutive.f90                 |  6 +--
- src/damage_local.f90                 |  8 +---
- src/damage_none.f90                  |  8 +---
- src/damage_nonlocal.f90              |  8 +---
- src/homogenization_RGC.f90           |  8 +---
- src/homogenization_isostrain.f90     |  8 +---
- src/homogenization_none.f90          | 10 ++---
- src/hydrogenflux_cahnhilliard.f90    |  8 +---
- src/hydrogenflux_isoconc.f90         | 10 ++---
- src/kinematics_cleavage_opening.f90  |  8 +---
- src/kinematics_slipplane_opening.f90 |  8 +---
- src/kinematics_thermal_expansion.f90 |  8 +---
- src/kinematics_vacancy_strain.f90    |  8 +---
- src/mesh.f90                         | 12 +++---
- src/numerics.f90                     | 13 +++----
- src/spectral_damage.f90              | 39 ++++++-------------
- src/spectral_interface.f90           | 31 ++++++++-------
- src/spectral_mech_AL.f90             | 46 ++++++++--------------
- src/spectral_mech_Basic.f90          | 52 +++++++++----------------
- src/spectral_mech_Polarisation.f90   | 52 +++++++++----------------
- src/spectral_thermal.f90             | 75 +++++++++++++++++-------------------
- src/spectral_utilities.f90           | 34 ++++++----------
- 23 files changed, 175 insertions(+), 312 deletions(-)
+ src/DAMASK_spectral.f90            | 27 +++++---------
+ src/mesh.f90                       | 12 +++---
+ src/numerics.f90                   | 13 +++----
+ src/spectral_damage.f90            | 39 ++++++--------------
+ src/spectral_interface.f90         | 31 ++++++++--------
+ src/spectral_mech_AL.f90           | 46 ++++++++---------------
+ src/spectral_mech_Basic.f90        | 52 +++++++++-----------------
+ src/spectral_mech_Polarisation.f90 | 52 ++++++++++----------------
+ src/spectral_thermal.f90           | 75 ++++++++++++++++++--------------------
+ src/spectral_utilities.f90         | 34 ++++++-----------
+ 10 files changed, 146 insertions(+), 235 deletions(-)
 
 diff --git a/src/DAMASK_spectral.f90 b/src/DAMASK_spectral.f90
 index f32bfb7b..c315b1b8 100644
@@ -105,352 +92,6 @@ index f32bfb7b..c315b1b8 100644
                                 MPI_DOUBLE, MPI_STATUS_IGNORE, ierr)
             if(ierr /=0_pInt) call IO_error(894_pInt, ext_msg='MPI_file_write')
           enddo
-diff --git a/src/constitutive.f90 b/src/constitutive.f90
-index 202242ae..f124e545 100644
---- a/src/constitutive.f90
-+++ b/src/constitutive.f90
-@@ -186,11 +186,11 @@ subroutine constitutive_init()
-  if (any(phase_kinematics == KINEMATICS_hydrogen_strain_ID))   call kinematics_hydrogen_strain_init(FILEUNIT)
-  close(FILEUNIT)
- 
-- mainProcess: if (worldrank == 0) then
--   write(6,'(/,a)')   ' <<<+-  constitutive init  -+>>>'
--   write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
-+ write(6,'(/,a)')   ' <<<+-  constitutive init  -+>>>'
-+ write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
- #include "compilation_info.f90"
- 
-+ mainProcess: if (worldrank == 0) then
- !--------------------------------------------------------------------------------------------------
- ! write description file for constitutive output
-    call IO_write_jobFile(FILEUNIT,'outputConstitutive')
-diff --git a/src/damage_local.f90 b/src/damage_local.f90
-index a24f0b1a..2f301493 100644
---- a/src/damage_local.f90
-+++ b/src/damage_local.f90
-@@ -72,8 +72,6 @@ subroutine damage_local_init(fileUnit)
-    damage, &
-    damage_initialPhi, &
-    material_partHomogenization
-- use numerics,only: &
--   worldrank
-  
-  implicit none
-  integer(pInt), intent(in) :: fileUnit
-@@ -86,11 +84,9 @@ subroutine damage_local_init(fileUnit)
-    tag  = '', &
-    line = ''
- 
-- mainProcess: if (worldrank == 0) then 
--   write(6,'(/,a)')   ' <<<+-  damage_'//DAMAGE_local_label//' init  -+>>>'
--   write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
-+ write(6,'(/,a)')   ' <<<+-  damage_'//DAMAGE_local_label//' init  -+>>>'
-+ write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
- #include "compilation_info.f90"
-- endif mainProcess
- 
-  maxNinstance = int(count(damage_type == DAMAGE_local_ID),pInt)
-  if (maxNinstance == 0_pInt) return
-diff --git a/src/damage_none.f90 b/src/damage_none.f90
-index 746de340..4750f594 100644
---- a/src/damage_none.f90
-+++ b/src/damage_none.f90
-@@ -26,19 +26,15 @@ subroutine damage_none_init()
-  use IO, only: &
-    IO_timeStamp
-  use material
-- use numerics, only: &
--   worldrank
-  
-  implicit none
-  integer(pInt) :: &
-    homog, &
-    NofMyHomog
- 
-- mainProcess: if (worldrank == 0) then 
--   write(6,'(/,a)')   ' <<<+-  damage_'//DAMAGE_none_label//' init  -+>>>'
--   write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
-+ write(6,'(/,a)')   ' <<<+-  damage_'//DAMAGE_none_label//' init  -+>>>'
-+ write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
- #include "compilation_info.f90"
-- endif mainProcess
- 
-   initializeInstances: do homog = 1_pInt, material_Nhomogenization
-    
-diff --git a/src/damage_nonlocal.f90 b/src/damage_nonlocal.f90
-index fb960ed7..cd6ba8a5 100644
---- a/src/damage_nonlocal.f90
-+++ b/src/damage_nonlocal.f90
-@@ -77,8 +77,6 @@ subroutine damage_nonlocal_init(fileUnit)
-    damage, &
-    damage_initialPhi, &
-    material_partHomogenization
-- use numerics,only: &
--   worldrank
- 
-  implicit none
-  integer(pInt), intent(in) :: fileUnit
-@@ -91,11 +89,9 @@ subroutine damage_nonlocal_init(fileUnit)
-    tag  = '', &
-    line = ''
- 
-- mainProcess: if (worldrank == 0) then 
--   write(6,'(/,a)')   ' <<<+-  damage_'//DAMAGE_nonlocal_label//' init  -+>>>'
--   write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
-+ write(6,'(/,a)')   ' <<<+-  damage_'//DAMAGE_nonlocal_label//' init  -+>>>'
-+ write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
- #include "compilation_info.f90"
-- endif mainProcess
-  
-  maxNinstance = int(count(damage_type == DAMAGE_nonlocal_ID),pInt)
-  if (maxNinstance == 0_pInt) return
-diff --git a/src/homogenization_RGC.f90 b/src/homogenization_RGC.f90
-index 43c16a39..84cb594d 100644
---- a/src/homogenization_RGC.f90
-+++ b/src/homogenization_RGC.f90
-@@ -100,8 +100,6 @@ subroutine homogenization_RGC_init(fileUnit)
-    FE_geomtype
-  use IO
-  use material
-- use numerics, only: &
--   worldrank
- 
-  implicit none
-  integer(pInt), intent(in) :: fileUnit                                                              !< file pointer to material configuration
-@@ -117,11 +115,9 @@ subroutine homogenization_RGC_init(fileUnit)
-    tag = '', &
-    line = ''
-  
-- mainProcess: if (worldrank == 0) then 
--   write(6,'(/,a)')   ' <<<+-  homogenization_'//HOMOGENIZATION_RGC_label//' init  -+>>>'
--   write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
-+ write(6,'(/,a)')   ' <<<+-  homogenization_'//HOMOGENIZATION_RGC_label//' init  -+>>>'
-+ write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
- #include "compilation_info.f90"
-- endif mainProcess
- 
-  maxNinstance = int(count(homogenization_type == HOMOGENIZATION_RGC_ID),pInt)
-  if (maxNinstance == 0_pInt) return
-diff --git a/src/homogenization_isostrain.f90 b/src/homogenization_isostrain.f90
-index aeb77c27..055bfbb4 100644
---- a/src/homogenization_isostrain.f90
-+++ b/src/homogenization_isostrain.f90
-@@ -62,8 +62,6 @@ subroutine homogenization_isostrain_init(fileUnit)
-    debug_levelBasic
-  use IO
-  use material
-- use numerics, only: &
--   worldrank
-  
-  implicit none
-  integer(pInt),                                      intent(in) :: fileUnit
-@@ -80,11 +78,9 @@ subroutine homogenization_isostrain_init(fileUnit)
-    tag  = '', &
-    line = ''
-  
-- mainProcess: if (worldrank == 0) then 
--   write(6,'(/,a)')   ' <<<+-  homogenization_'//HOMOGENIZATION_ISOSTRAIN_label//' init  -+>>>'
--   write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
-+ write(6,'(/,a)')   ' <<<+-  homogenization_'//HOMOGENIZATION_ISOSTRAIN_label//' init  -+>>>'
-+ write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
- #include "compilation_info.f90"
-- endif mainProcess
- 
-  maxNinstance = count(homogenization_type == HOMOGENIZATION_ISOSTRAIN_ID)
-  if (maxNinstance == 0) return
-diff --git a/src/homogenization_none.f90 b/src/homogenization_none.f90
-index 11bed781..75d8bcd3 100644
---- a/src/homogenization_none.f90
-+++ b/src/homogenization_none.f90
-@@ -29,21 +29,17 @@ subroutine homogenization_none_init()
-  use IO, only: &
-    IO_timeStamp
-  use material
-- use numerics, only: &
--   worldrank
-  
-  implicit none
-  integer(pInt) :: &
-    homog, &
-    NofMyHomog
- 
-- mainProcess: if (worldrank == 0) then 
--   write(6,'(/,a)')   ' <<<+-  homogenization_'//HOMOGENIZATION_NONE_label//' init  -+>>>'
--   write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
-+ write(6,'(/,a)')   ' <<<+-  homogenization_'//HOMOGENIZATION_NONE_label//' init  -+>>>'
-+ write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
- #include "compilation_info.f90"
-- endif mainProcess
- 
--  initializeInstances: do homog = 1_pInt, material_Nhomogenization
-+ initializeInstances: do homog = 1_pInt, material_Nhomogenization
-    
-    myhomog: if (homogenization_type(homog) == HOMOGENIZATION_none_ID) then
-      NofMyHomog = count(material_homog == homog)
-diff --git a/src/hydrogenflux_cahnhilliard.f90 b/src/hydrogenflux_cahnhilliard.f90
-index db08bf5d..89479a9c 100644
---- a/src/hydrogenflux_cahnhilliard.f90
-+++ b/src/hydrogenflux_cahnhilliard.f90
-@@ -84,8 +84,6 @@ subroutine hydrogenflux_cahnhilliard_init(fileUnit)
-    hydrogenflux_initialCh, &
-    material_partHomogenization, &
-    material_partPhase
-- use numerics,only: &
--   worldrank
- 
-  implicit none
-  integer(pInt), intent(in) :: fileUnit
-@@ -98,11 +96,9 @@ subroutine hydrogenflux_cahnhilliard_init(fileUnit)
-    tag  = '', &
-    line = ''
- 
-- mainProcess: if (worldrank == 0) then 
--   write(6,'(/,a)')   ' <<<+-  hydrogenflux_'//HYDROGENFLUX_cahnhilliard_label//' init  -+>>>'
--   write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
-+ write(6,'(/,a)')   ' <<<+-  hydrogenflux_'//HYDROGENFLUX_cahnhilliard_label//' init  -+>>>'
-+ write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
- #include "compilation_info.f90"
-- endif mainProcess
-  
-  maxNinstance = int(count(hydrogenflux_type == HYDROGENFLUX_cahnhilliard_ID),pInt)
-  if (maxNinstance == 0_pInt) return
-diff --git a/src/hydrogenflux_isoconc.f90 b/src/hydrogenflux_isoconc.f90
-index df5c01e6..bef2a843 100644
---- a/src/hydrogenflux_isoconc.f90
-+++ b/src/hydrogenflux_isoconc.f90
-@@ -27,21 +27,17 @@ subroutine hydrogenflux_isoconc_init()
-  use IO, only: &
-    IO_timeStamp
-  use material
-- use numerics, only: &
--   worldrank
-  
-  implicit none
-  integer(pInt) :: &
-    homog, &
-    NofMyHomog
- 
-- mainProcess: if (worldrank == 0) then 
--   write(6,'(/,a)')   ' <<<+-  hydrogenflux_'//HYDROGENFLUX_isoconc_label//' init  -+>>>'
--   write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
-+ write(6,'(/,a)')   ' <<<+-  hydrogenflux_'//HYDROGENFLUX_isoconc_label//' init  -+>>>'
-+ write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
- #include "compilation_info.f90"
-- endif mainProcess
- 
--  initializeInstances: do homog = 1_pInt, material_Nhomogenization
-+ initializeInstances: do homog = 1_pInt, material_Nhomogenization
-    
-    myhomog: if (hydrogenflux_type(homog) == HYDROGENFLUX_isoconc_ID) then
-      NofMyHomog = count(material_homog == homog)
-diff --git a/src/kinematics_cleavage_opening.f90 b/src/kinematics_cleavage_opening.f90
-index 146918f5..fffa2616 100644
---- a/src/kinematics_cleavage_opening.f90
-+++ b/src/kinematics_cleavage_opening.f90
-@@ -81,8 +81,6 @@ subroutine kinematics_cleavage_opening_init(fileUnit)
-    KINEMATICS_cleavage_opening_ID, &
-    material_Nphase, &
-    MATERIAL_partPhase
-- use numerics,only: &
--   worldrank
-  use lattice, only: &
-    lattice_maxNcleavageFamily, &
-    lattice_NcleavageSystem
-@@ -97,11 +95,9 @@ subroutine kinematics_cleavage_opening_init(fileUnit)
-    tag  = '', &
-    line = ''
- 
-- mainProcess: if (worldrank == 0) then 
--   write(6,'(/,a)')   ' <<<+-  kinematics_'//KINEMATICS_cleavage_opening_LABEL//' init  -+>>>'
--   write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
-+ write(6,'(/,a)')   ' <<<+-  kinematics_'//KINEMATICS_cleavage_opening_LABEL//' init  -+>>>'
-+ write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
- #include "compilation_info.f90"
-- endif mainProcess
- 
-  maxNinstance = int(count(phase_kinematics == KINEMATICS_cleavage_opening_ID),pInt)
-  if (maxNinstance == 0_pInt) return
-diff --git a/src/kinematics_slipplane_opening.f90 b/src/kinematics_slipplane_opening.f90
-index f32efa92..07b98aa2 100644
---- a/src/kinematics_slipplane_opening.f90
-+++ b/src/kinematics_slipplane_opening.f90
-@@ -81,8 +81,6 @@ subroutine kinematics_slipplane_opening_init(fileUnit)
-    KINEMATICS_slipplane_opening_ID, &
-    material_Nphase, &
-    MATERIAL_partPhase
-- use numerics,only: &
--   worldrank
-  use lattice, only: &
-    lattice_maxNslipFamily, &
-    lattice_NslipSystem
-@@ -97,11 +95,9 @@ subroutine kinematics_slipplane_opening_init(fileUnit)
-    tag  = '', &
-    line = ''
- 
-- mainProcess: if (worldrank == 0) then 
--   write(6,'(/,a)')   ' <<<+-  kinematics_'//KINEMATICS_slipplane_opening_LABEL//' init  -+>>>'
--   write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
-+ write(6,'(/,a)')   ' <<<+-  kinematics_'//KINEMATICS_slipplane_opening_LABEL//' init  -+>>>'
-+ write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
- #include "compilation_info.f90"
-- endif mainProcess
- 
-  maxNinstance = int(count(phase_kinematics == KINEMATICS_slipplane_opening_ID),pInt)
-  if (maxNinstance == 0_pInt) return
-diff --git a/src/kinematics_thermal_expansion.f90 b/src/kinematics_thermal_expansion.f90
-index 30c267d3..e7cbca67 100644
---- a/src/kinematics_thermal_expansion.f90
-+++ b/src/kinematics_thermal_expansion.f90
-@@ -71,8 +71,6 @@ subroutine kinematics_thermal_expansion_init(fileUnit)
-    KINEMATICS_thermal_expansion_ID, &
-    material_Nphase, &
-    MATERIAL_partPhase
-- use numerics,only: &
--   worldrank
- 
-  implicit none
-  integer(pInt), intent(in) :: fileUnit
-@@ -83,11 +81,9 @@ subroutine kinematics_thermal_expansion_init(fileUnit)
-    tag     = '', &
-    line    = ''
- 
-- mainProcess: if (worldrank == 0) then 
--   write(6,'(/,a)')   ' <<<+-  kinematics_'//KINEMATICS_thermal_expansion_LABEL//' init  -+>>>'
--   write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
-+ write(6,'(/,a)')   ' <<<+-  kinematics_'//KINEMATICS_thermal_expansion_LABEL//' init  -+>>>'
-+ write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
- #include "compilation_info.f90"
-- endif mainProcess
- 
-  maxNinstance = int(count(phase_kinematics == KINEMATICS_thermal_expansion_ID),pInt)
-  if (maxNinstance == 0_pInt) return
-diff --git a/src/kinematics_vacancy_strain.f90 b/src/kinematics_vacancy_strain.f90
-index 791c0e3c..9558f506 100644
---- a/src/kinematics_vacancy_strain.f90
-+++ b/src/kinematics_vacancy_strain.f90
-@@ -71,8 +71,6 @@ subroutine kinematics_vacancy_strain_init(fileUnit)
-    KINEMATICS_vacancy_strain_ID, &
-    material_Nphase, &
-    MATERIAL_partPhase
-- use numerics,only: &
--   worldrank
- 
-  implicit none
-  integer(pInt), intent(in) :: fileUnit
-@@ -83,11 +81,9 @@ subroutine kinematics_vacancy_strain_init(fileUnit)
-    tag  = '', &
-    line = ''
- 
-- mainProcess: if (worldrank == 0) then 
--   write(6,'(/,a)')   ' <<<+-  kinematics_'//KINEMATICS_vacancy_strain_LABEL//' init  -+>>>'
--   write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
-+ write(6,'(/,a)')   ' <<<+-  kinematics_'//KINEMATICS_vacancy_strain_LABEL//' init  -+>>>'
-+ write(6,'(a15,a)') ' Current time: ',IO_timeStamp()
- #include "compilation_info.f90"
-- endif mainProcess
- 
-  maxNinstance = int(count(phase_kinematics == KINEMATICS_vacancy_strain_ID),pInt)
-  if (maxNinstance == 0_pInt) return
 diff --git a/src/mesh.f90 b/src/mesh.f90
 index 666fe1e3..a314c22c 100644
 --- a/src/mesh.f90
