--- a/src/MarcInclude/creeps2018.1
+++ b/src/MarcInclude/creeps2018.1
@@ -6,12 +6,12 @@
 !        MSC.Marc include file
 !
 real(pReal)   cptim,timinc,timinc_p,timinc_s,timincm,timinc_a,timinc_b
-integer(pInt) icfte,icfst,icfeq,icftm,icetem,mcreep,jcreep,icpa,icftmp,icfstr,&
+integer       icfte,icfst,icfeq,icftm,icetem,mcreep,jcreep,icpa,icftmp,icfstr,&
               icfqcp,icfcpm,icrppr,icrcha,icpb,iicpmt,iicpa
 real(pReal)   time_beg_lcase,time_beg_inc,fractol,time_beg_pst
 real(pReal)   fraction_donn,timinc_ol2
 !
-integer(pInt) num_creepsr,num_creepsi,num_creeps2r
+integer       num_creepsr,num_creepsi,num_creeps2r
 parameter(num_creepsr=7)
 parameter(num_creepsi=17)
 parameter(num_creeps2r=6)
